# p2pit

./: .pre-commit-config.yaml  Makefile  README.md
build-scripts/: auto-format.sh  clean.sh  install-pre-commit-hook.sh  install.sh  linter.sh  pre-commit-hook.sh  test.sh
chat-example/: pyproject.toml
chat-example/test/: test_package.py
example-chat/: pyproject.toml
example-chat/p2pit_chat_example/: __init__.py  p2pchat.py
example-chat/test/: test_package.py
p2pit/: __init__.py  pyproject.toml
p2pit/test/: test_package.py
