[tool.poetry]
name = "p2pit-chat-example"
version = "0.1.0"
description = "Example p2pit chat client"
authors = ["Gareth Davidson <gaz@bitplane.net>"]
license = "WTFPL"
readme = "README.md"
packages = [{include = "p2pit_chat_example"}]

[tool.poetry.dependencies]
python = "^3.9"
#p2pit = {path = "../p2pit"}

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
