[tool.poetry]
name = "p2pit"
version = "0.1.0"
description = "Make any software p2p"
authors = ["Gareth Davidson <gaz@bitplane.net>"]
license = "BSD"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
