[project]
name = "p2pit"
version = "0.1.0"
description = "Make any software p2p"
authors = [
    {name = "Gareth Davidson", email = "gaz@bitplane.net"},
]
readme = "README.md"

dependencies = [
]

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "isort",
    "pytest",
    "pre-commit",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
